Add jbundle.toml project configuration support
Users had to repeat CLI flags on every build. A per-project config file
avoids that and makes builds reproducible across the team.

Signed-off-by: Avelino <31996+avelino@users.noreply.github.com>